@@ -1,9 +1,9 @@
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
-examples/ex4.pl
-examples/ex5.pl
+examples/print_nanjing_def_xml_file.pl
+examples/print_nanjing_image.pl
+examples/print_nanjing_line_stations.pl
+examples/print_nanjing_lines.pl
+examples/print_nanjing_route.pl
 images/Nanjing.png
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
