@@ -2,6 +2,7 @@
  - Fix copyright holder.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Improve SYNOPSIS section in doc.
+ - Rename examples to better names.
  - Update author github username.
 
 0.05 2025-01-21T21:04:36+01:00
